fix(SFOX): padding instead of margin to correctly align inline groups

--- a/assets/css/components/_forms.scss
+++ b/assets/css/components/_forms.scss
@@ -83,7 +83,7 @@ form.bc-form {
     &.inline {
       @extend .flex-row;
       .item:not(:last-child) {
-        margin-right: 1em;
+        padding-right: 1em;
       }
     }
     label {
